[gd_scene load_steps=8 format=3 uid="uid://dl512olnif8al"]

[ext_resource type="Texture2D" uid="uid://brl4368ugxcoc" path="res://Scene_Switcher/ammo/asset/Target.png" id="1_e5mkq"]
[ext_resource type="Script" path="res://Scene_Switcher/ammo/missile_target.gd" id="1_lgpmp"]
[ext_resource type="AudioStream" uid="uid://tnta4wntf1pt" path="res://Scene_Switcher/sound/explosion.mp3" id="3_5jvid"]

[sub_resource type="CircleShape2D" id="CircleShape2D_f278g"]
radius = 40.0

[sub_resource type="Animation" id="Animation_71o0f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0, 0.705882)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.3125, 0.3125)]
}

[sub_resource type="Animation" id="Animation_j5btu"]
resource_name = "target_anim"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 0, 0, 0.705882), Color(1, 0, 0, 0.25098), Color(1, 0, 0, 0.705882)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.3125, 0.3125), Vector2(0.36, 0.36), Vector2(0.3125, 0.3125)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y2gc6"]
_data = {
"RESET": SubResource("Animation_71o0f"),
"target_anim": SubResource("Animation_j5btu")
}

[node name="Missile_Target" type="Area2D"]
collision_layer = 64
collision_mask = 512
script = ExtResource("1_lgpmp")
power = 10

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 0, 0, 0.705882)
scale = Vector2(0.3125, 0.3125)
texture = ExtResource("1_e5mkq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_f278g")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_y2gc6")
}
autoplay = "target_anim"

[node name="explosion_death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_5jvid")
bus = &"SFX"

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="finished" from="explosion_death" to="." method="_on_explosion_death_finished"]
